fix bug element-plus checkbox checktag z-index为1，导致滚动时复选框漂浮在表格抬头上方

--- a/src/plugin-config/prime-vue/custom.scss
+++ b/src/plugin-config/prime-vue/custom.scss
@@ -1,3 +1,11 @@
 .p-treetable.p-treetable-sm .p-treetable-header {
   padding: 0.5rem;
 }
+
+.p-treetable-scrollable .p-treetable-thead {
+  z-index: 2 !important;
+}
+
+.p-datatable-scrollable .p-datatable-thead {
+  z-index: 2 !important;
+}
